# capslock-fix-rpm

./: README.md  apply-custom-capslock.desktop  build-install-silverblue.sh  capslock  capslock-delay-fix.spec  install-capslock.sh  meson.build  remap_capslock.sh  uninstall-safe.sh
